test fix permmissions for hostname workflow

--- a/.github/workflows/hostname.yml
+++ b/.github/workflows/hostname.yml
@@ -9,6 +9,8 @@ on:
 
 jobs:
   print-hostname:
+    permissions:
+    contents: read # for actions/checkout to fetch code
     runs-on: ubuntu-latest
 
     steps:
