fix permissions for hostname

--- a/.github/workflows/hostname.yml
+++ b/.github/workflows/hostname.yml
@@ -7,10 +7,10 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions: read-all
+
 jobs:
   print-hostname:
-    permissions:
-    contents: read # for actions/checkout to fetch code
     runs-on: ubuntu-latest
 
     steps:
